--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "10.4.5",
     "axios": "^0.27.2",
-    "bootstrap": "^5.2.0-beta1",
+    "bootstrap": "^5.2.0",
     "node-sass": "^7.0.1",
     "npm": "^8.10.0",
     "react": "^18.1.0",
@@ -30,8 +30,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "json-server -p 8000 -w src/data/db.json"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
